[package]
name = "vote-handler"
version = "0.1.0"
authors = ["ByteAlex <bytealex@zerotwo.bot>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
warp = "0.3.0"
reqwest = "0.11.0"
serde = {version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
log = "0.4.14"
env_logger = "0.8.2"
lazy_static = "1.4.0"