[package]
name = "vote-handler"
version = "0.1.0"
authors = ["ByteAlex <bytealex@zerotwo.bot>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
warp = "0.3.2"
reqwest = "0.11.11"
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
log = "0.4.17"
env_logger = "0.9.0"
lazy_static = "1.4.0"
jwt = "0.16.0"
sha2 = "0.10.5"
hmac = "0.12.1"